# Agentic-AI-automation

./: .gitignore  README.md
CrewAI projects/ai_debate/: README.md  pyproject.toml
CrewAI projects/ai_debate/output/: decide.md  oppose.md  propose.md
CrewAI projects/ai_debate/src/ai_debate/: crew.py  main.py
CrewAI projects/ai_debate/src/ai_debate/config/: agents.yaml
CrewAI projects/ai_debate/src/output/: decide.md  oppose.md  propose.md
CrewAI projects/engineering_team/: README.md
CrewAI projects/financial_researcher/: README.md  report.md
CrewAI projects/stock_picker/: README.md  report.md
Deep Research AI Agent (openai agent sdk)/: README.md  agents.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
Langraph/: README.md  sidekick_tools.py
Langraph/sandbox/: history_of_poland.md  javonet_report.md
MCP servers + openai sdk/Account server project/: README.md  accounts.json  accounts.py  accounts_server.py  agent.py  requirements.txt
MCP servers + openai sdk/Equity traders (Linux)/: README.md  accounts_server.py  constants.py  main.py  mcp_params.py  reset.py  templates.py  traders.py  trading_floor.py
ML_Deep_learning/: README.md  items.py  loaders.py  testing.py  text_vectorizers.py
ML_Deep_learning/Frontier llm closed source model/: README.md  frontier_llm_model.py
Project AI agent cold email automation (openai sdk)/: README.md  main.py
Project personal career agent project (openai sdk)/: README.md  main.py
RAG pipeline/: README.md  app_gradio.py  visualize.py
(+24 files in other folders)
