[project]
name = "ai_debate"
version = "0.1.0"
description = "AI_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
ai_debate = "ai_debate.main:run"
run_crew = "ai_debate.main:run"
train = "ai_debate.main:train"
replay = "ai_debate.main:replay"
test = "ai_debate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
